# ton-connect-wasm

./: README.md  index.html  package.json  tonconnect-manifest.json
.github/workflows/: build.yml
assets/: index-0bae04d6.css  index-15edbb00.js  index-23813a29.js  index-2e724a60.css  index-3391ea2a.js  index-4d5dbe5d.css  index-54870766.js  index-583e7529.css  index-7a40c6ac.css  index-7b7c09ce.css  index-7bc79d2a.css  index-a65ae457.js  index-bca9f8e7.css  index-dae3a2b5.js  index-e0f5f8dc.js  index-e9c222e2.css  index-eada326e.css  index-f043925b.css
contract/: Cargo.toml  README.md
contract/schema/: contract.json
contract/schema/raw/: execute.json  query.json  response_to_get_debug_state.json  response_to_get_posts.json
contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  ton.rs
front/: index.html  package.json  tsconfig.json  vite.config.ts
front/public/: tonconnect-manifest.json
front/src/: App.tsx  constants.ts  main.tsx  queryClient.tsx  queryClientPussy.tsx
front/src/api/: cyber.ts
front/src/components/Input/: index.tsx  (+1 more)
front/src/hooks/: useCyberPassport.tsx
front/src/styles/: globalStyles.ts  index.scss  theme.ts
front/src/utils/: formatNumber.ts  getDisplayAmount.ts  getTransactions.ts  trimString.ts
src/: App.tsx
src/api/: axios.ts  getTelegramId.ts
src/assets/: asset.d.ts
src/components/common/: Router.tsx
src/components/main/: TonWallet.tsx
src/pages/Main/: Main.tsx
src/styles/: styled.d.ts
tx_service/: .env.example  Dockerfile  README.md  app.py  contract_execution.py  docker-compose.yaml  requirements.txt
(+44 files in other folders)
