[package]
name = "ton-connect-wasm"
version = "0.1.0"
authors = ["C H <litvintech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-schema = "1.0.1"
cosmwasm-std = { version = "1.0.1" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
hex = "0.4.3"
cyber-std = { version = "0.2.1" }
sha2 = { version = "0.9.5", default-features = false }
base64 = "0.21.7"
serde_json = "1.0.117"
